--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -53,7 +53,7 @@
         <file>Images/rebot.png</file>
         <file>Images/day_recommend.png</file>
         <file>Images/title.png</file>
-        <file>Images/头像.jpg</file>
+        <file>Images/touxiang.jpg</file>
         <file>Images/Splash_Screen_First_Closed_Beta.png</file>
         <file>Images/go_star.jpeg</file>
         <file>Images/tianjing.jpeg</file>
