修复了localMusic的显示重叠bug

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -14,6 +14,7 @@
         <file>navigationPage/local.qml</file>
         <file>navigationPage/recommendation.qml</file>
         <file>navigationPage/userLogin.qml</file>
+        <file>navigationPage/DemoData.qml</file>
 
         <file>navigation/ItemsFooter.qml</file>
         <file>navigation/ItemsOriginal.qml</file>
