在设置里添加了深色模式切换功能，bottombar区域的文字显示修复了文字滚动问题

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -29,5 +29,8 @@
         <file>components/SrollText.qml</file>
         <file>components/RandomSelector.qml</file>
 
+        <file>settingsPage/AboutPage.qml</file>
+        <file>settingsPage/DisplayPage.qml</file>
+
     </qresource>
 </RCC>
