--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -28,6 +28,9 @@
         <file>components/MusicInfo.qml</file>
         <file>components/SrollText.qml</file>
         <file>components/RandomSelector.qml</file>
+        <file>components/DrawerMusic/MusicPlayerPage.qml</file>
+        <file>components/DrawerMusic/LeftPanel.qml</file>
+        <file>components/DrawerMusic/RightPanel.qml</file>
 
         <file>settingsPage/AboutPage.qml</file>
         <file>settingsPage/DisplayPage.qml</file>
